# oomph

./: CMakeLists.txt
src/oomph/: cstring.hpp  overload.hpp  variant.hpp
tests/: cstring.cpp  overload.cpp  variant.cpp
